--- a/Homecare/Web.config
+++ b/Homecare/Web.config
@@ -69,6 +69,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="HomecareDBEntities" connectionString="metadata=res://*/Models.DataModels.HomecareDB.csdl|res://*/Models.DataModels.HomecareDB.ssdl|res://*/Models.DataModels.HomecareDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=homecarebois.database.windows.net;initial catalog=HomecareDB;persist security info=True;user id=homecareboi;password=Thehamz123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HomecareDBEntities" connectionString="metadata=res://*/Models.DataModels.HomecareDB.csdl|res://*/Models.DataModels.HomecareDB.ssdl|res://*/Models.DataModels.HomecareDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=homecarebois.database.windows.net;initial catalog=HomecareDB;persist security info=True;user id=homecareboi;password=*insertpassword*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
