--- a/Homecare/Homecare.csproj
+++ b/Homecare/Homecare.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Models\DataModels\User_Rights.cs">
       <DependentUpon>HomecareDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\PatientViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -255,11 +256,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Patient\CreatePatient.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\City\" />
-    <Folder Include="Views\Patient\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
