--- a/Homecare/Homecare.csproj
+++ b/Homecare/Homecare.csproj
@@ -257,6 +257,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Patient\CreatePatient.cshtml" />
+    <Content Include="Views\Patient\PatientList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
