--- a/Homecare/Homecare.csproj
+++ b/Homecare/Homecare.csproj
@@ -148,7 +148,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\CityController.cs" />
+    <Compile Include="Controllers\CaretakerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PatientController.cs" />
     <Compile Include="Global.asax.cs">
@@ -205,6 +205,7 @@
     <Compile Include="Models\DataModels\User_Rights.cs">
       <DependentUpon>HomecareDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\CaretakerViewModel.cs" />
     <Compile Include="Models\ViewModels\PatientViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -257,6 +258,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Patient\CreatePatient.cshtml" />
+    <Content Include="Views\Caretaker\CreateCaretaker.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
