--- a/Homecare/Homecare.csproj
+++ b/Homecare/Homecare.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Models\DataModels\User_Rights.cs">
       <DependentUpon>HomecareDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\PatientParentViewcs.cs" />
     <Compile Include="Models\ViewModels\PatientViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -255,9 +256,12 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Patient\CreatePatient.cshtml" />
     <Content Include="Views\Patient\PatientList.cshtml" />
+    <Content Include="Views\Patient\Index.cshtml" />
+    <Content Include="Views\Patient\PatientDetails.cshtml" />
+    <Content Include="Views\Patient\EditPatient.cshtml" />
+    <Content Include="Views\Patient\DeletePatient.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
